# mdview

./: .gitignore  .gitmodules  CLAUDE.md  README.md  SPEC.md  TODO.md  electrobun.config.ts  index.html  package-lock.json  package.json  tsconfig.json
icons/: AppIcon.icns
patches/electrobun/: open-file-events.patch
rfcs/: 0000-rfc-process.md  0001-cli-arguments.md  0002-menu-actions.md
scripts/: make-dmg.sh  patch-electrobun.sh  patch-plist.sh
src/: cli.ts  main.js  rpc.ts  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src/bun/: index.ts
src/main-ui/: index.html  index.ts  styles.css
src/mainview/: index.css  index.html  index.ts
src/shared/: rpc-types.ts
