[package]
name = "mdview"
version = "0.1.0"
description = "A lightweight markdown viewer"
authors = ["Charlie Cheever"]
license = "MIT"
edition = "2021"

[lib]
name = "mdview_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["protocol-asset"] }
tauri-plugin-dialog = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-clipboard-manager = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
